# clarifAI

./: .bandit  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  =5.0.0  CI_IMPLEMENTATION_REPORT.md  CONTRIBUTING.md  CURRENT_COMPILE_WARNINGS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PYTHON_ENV_AND_GIT_HOOKS_SETUP.md  README.md  README_embedding.md  conftest.py  demo_default_plugin.py  demo_embedding_pipeline.py  docker-compose.yml  install_prompts.py  pyproject.toml  test_embedding_integration.py  validate_implementation.py
services/aclarai-core/: Dockerfile  README.md  pyproject.toml
services/aclarai-core/aclarai_core/: __init__.py  concept_processor.py  dirty_block_consumer.py  main.py  tier2_integration.py
services/aclarai-core/install/: install_config.py  install_prompts.py
services/aclarai-core/tests/: test_concept_processor.py  test_consumer_integration.py  test_dirty_block_consumer.py
services/aclarai-ui/: .env.example  Dockerfile  README.md  pyproject.toml
services/aclarai-ui/aclarai_ui/: __init__.py  config.py  config_launcher.py  config_panel.py  main.py
services/aclarai-ui/tests/: __init__.py  conftest.py  test_config.py  test_config_panel.py  test_config_panel_integration.py  test_main.py
services/clarifai-core/: Dockerfile  README.md  pyproject.toml
services/clarifai-core/clarifai_core/: __init__.py  concept_processor.py  dirty_block_consumer.py  main.py  tier2_integration.py
services/clarifai-core/install/: install_config.py  install_prompts.py
services/clarifai-core/tests/: test_concept_processor.py  test_dirty_block_consumer.py
services/clarifai-ui/: Dockerfile  README.md  example.env  pyproject.toml
services/clarifai-ui/clarifai_ui/: __init__.py  config.py  main.py
services/clarifai-ui/tests/: __init__.py  test_config.py  test_main.py
services/scheduler/: Dockerfile  README.md  pyproject.toml
services/scheduler/aclarai_scheduler/: __init__.py  concept_refresh.py  main.py  vault_sync.py
services/scheduler/clarifai_scheduler/: __init__.py  main.py  vault_sync.py
services/scheduler/scheduler/: __init__.py  main.py
services/scheduler/tests/: __init__.py  test_scheduler_integration.py
services/vault-watcher/: Dockerfile  README.md  pyproject.toml
services/vault-watcher/aclarai_vault_watcher/: __init__.py  block_parser.py  file_watcher.py  main.py  rabbitmq_publisher.py
services/vault-watcher/clarifai_vault_watcher/: __init__.py  block_parser.py  file_watcher.py  main.py  rabbitmq_publisher.py
services/vault-watcher/tests/: test_block_parser.py  test_integration.py  test_rabbitmq_integration.py
services/vault-watcher/vault_watcher/: __init__.py  main.py
shared/: README.md  __init__.py  pyproject.toml  requirements.txt  test_noun_phrase_basic.py  test_noun_phrase_extraction.py
shared/aclarai_shared/: __init__.py  aclarai.config.default.yaml  config.py  import_system.py  plugin_interface.py
shared/aclarai_shared/claim_concept_linking/: __init__.py  agent.py  markdown_updater.py  models.py  neo4j_operations.py  orchestrator.py
shared/aclarai_shared/claimify/: __init__.py  agents.py  config_integration.py  data_models.py  integration.py  pipeline.py
shared/aclarai_shared/concept_detection/: __init__.py  detector.py  models.py
shared/aclarai_shared/embedding/: __init__.py  chunking.py  models.py  storage.py
shared/aclarai_shared/graph/: __init__.py  models.py  neo4j_manager.py
shared/aclarai_shared/mq/: __init__.py  rabbitmq_manager.py
shared/aclarai_shared/noun_phrase_extraction/: __init__.py  concept_candidates_store.py  extractor.py  models.py
shared/aclarai_shared/plugins/: __init__.py  default_plugin.py  utils.py
shared/aclarai_shared/prompts/: __init__.py  conversation_extraction.yaml
shared/aclarai_shared/scripts/: README.md  demo_claim_concept_linking.py  import_cli.py
shared/aclarai_shared/tier2_summary/: __init__.py  agent.py  data_models.py
shared/aclarai_shared/tier3_concept/: __init__.py  writer.py
shared/aclarai_shared/utils/: __init__.py  block_id.py  config_installer.py  prompt_installer.py  prompt_loader.py
shared/aclarai_shared/vault/: __init__.py  block_parser.py
shared/clarifai_shared/: __init__.py  clarifai.config.default.yaml  config.py  import_cli.py  import_system.py  plugin_interface.py
shared/clarifai_shared/claimify/: README.md  __init__.py  agents.py  complete_example.py  config_integration.py  data_models.py  example.py  integration.py  integration_example.py  pipeline.py
shared/clarifai_shared/concept_detection/: __init__.py  detector.py  models.py
shared/clarifai_shared/embedding/: __init__.py  chunking.py  models.py  storage.py
shared/clarifai_shared/graph/: README.md  __init__.py  data_models.py  example.py  manager.py  models.py  neo4j_manager.py  simple_example.py
shared/clarifai_shared/mq/: __init__.py  rabbitmq_manager.py
shared/clarifai_shared/noun_phrase_extraction/: __init__.py  concept_candidates_store.py  extractor.py  models.py
shared/clarifai_shared/plugins/: __init__.py  default_plugin.py  utils.py
shared/clarifai_shared/prompts/: __init__.py  claimify_decomposition.yaml  claimify_selection.yaml  conversation_extraction.py
shared/clarifai_shared/scripts/: README.md  import_cli.py
shared/clarifai_shared/tier2_summary/: __init__.py  agent.py  data_models.py
shared/clarifai_shared/tier3_concept/: __init__.py  writer.py
shared/clarifai_shared/utils/: __init__.py  block_id.py  config_installer.py  install_config.py  prompt_installer.py  prompt_loader.py
shared/clarifai_shared/vault/: __init__.py  block_parser.py
shared/database/: __init__.py
shared/messaging/: __init__.py
shared/models/: __init__.py
shared/tests/: conftest.py  test_config.py  test_config_dataclasses.py  test_config_yaml.py  test_default_plugin.py  test_integration.py  test_mock_services.py  test_noun_phrase_extraction.py  test_noun_phrase_integration.py  test_plugin_interface.py  test_plugins.py  test_plugins_utils.py  test_prompts_init.py  test_tier1_comprehensive.py  test_tier1_import.py  test_tier2_summary.py
shared/tests/graph/: README.md  (+7 more)
(+203 files in other folders)
