[project]
name = "aclarai-monorepo"
version = "0.1.0"
description = "Monorepo for the aclarai project."
dependencies = [
    "python-dotenv>=1.0.0",
    "llama-index-core>=0.12.0",
    "llama-index-llms-openai>=0.2.0",
    "llama-index-embeddings-huggingface>=0.3.0",
    "llama-index-vector-stores-postgres>=0.2.0",
    "pyyaml>=6.0",
    "sentence-transformers>=3.0.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "pgvector>=0.3.0",
    "neo4j>=5.0.0",
    "watchdog>=6.0.0",
    "pika>=1.3.2",
    "pytest>=8.4.0",
    "hnswlib>=0.8.0",
    "spacy>=3.7.0",
    "en-core-web-sm",
]
optional-dependencies = { dev = [
    "bandit>=1.8.0",
    "black>=25.1.0",
    "mypy>=1.16.0",
    "pre-commit>=3.7.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.13",
]}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "shared/aclarai_shared",
  "services/aclarai-core/aclarai_core",
  "services/aclarai-ui/aclarai_ui",
  "services/scheduler/aclarai_scheduler",
  "services/vault-watcher/aclarai_vault_watcher",
]

[tool.uv.sources]
# This tells uv: "Any time any package asks for `aclarai-shared`,
# don't go to PyPI. Instead, use the package from the local workspace."
aclarai-shared = { workspace = true }
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[tool.uv.workspace]
members = [
    "services/aclarai-core",
    "services/vault-watcher",
    "services/scheduler",
    "services/aclarai-ui",
    "shared"
]

# Ruff configuration
[tool.ruff]
target-version = "py311"
line-length = 88
lint.select = ["E", "W", "F", "I", "B", "C4", "ARG", "SIM"]
lint.ignore = ["E501", "E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Black configuration
[tool.black]
line-length = 88
target-version = ["py311"]

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests", "shared/tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=aclarai_shared --cov-report=term-missing --cov-report=xml --cov-config=pyproject.toml"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["aclarai_shared"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]

# Bandit configuration for aclarai monorepo
# Configuration to reduce false positives for containerized applications
[tool.bandit]
# Skip specific checks that are false positives for our use case:
# B101: Use of assert detected - Normal in test files
# B104: Hardcoded bind all interfaces - Intentional for containerized web apps
skips = ["B101", "B104"]

# Exclude test directories and virtual environment to avoid false positives
exclude_dirs = ["tests", "*/tests", ".venv", "*/.*", "vault", "docs"]

# Focus on medium and high severity issues
severity = "medium"
confidence = "medium"
