[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clarifai-shared"
version = "0.1.0"
description = "Shared utilities and modules for ClarifAI services."
dependencies = [
    "python-dotenv>=1.0.0",
    "llama-index-core>=0.12.0",
    "llama-index-llms-openai>=0.2.0",
]

[tool.ruff]
# Service-specific ruff config
