[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aclarai-shared"
version = "0.1.0"
description = "Shared utilities and modules for aclarai services."
dependencies = [
    "python-dotenv>=1.0.0",
    "llama-index-core>=0.12.0",
    "llama-index-llms-openai>=0.2.0",
    "llama-index-embeddings-huggingface>=0.3.0",
    "llama-index-vector-stores-postgres>=0.2.0",
    "pyyaml>=6.0",
    "sentence-transformers>=3.0.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "pgvector>=0.3.0",
    "neo4j>=5.0.0",
]

[tool.ruff]
# Service-specific ruff config
