[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aclarai-core"
version = "0.1.0"
description = "Core processing engine for aclarai, including agentic capabilities."
dependencies = [
    "aclarai-shared",
    "pika>=1.3.0"
]

[tool.ruff]
# Service-specific ruff config if needed, or inherits from root.
