[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aclarai-ui"
version = "0.1.0"
description = "User interface for aclarai."
dependencies = [
    "gradio",
    "aclarai-shared"
]

[project.optional-dependencies]
test = [
    "pytest",
    "playwright",
    "pytest-playwright"
]

[project.scripts]
aclarai-ui = "aclarai_ui.main:main"

[tool.hatch.build.targets.wheel]
packages = ["aclarai_ui"]
