[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clarifai-core"
version = "0.1.0"
description = "Core processing engine for ClarifAI, including agentic capabilities."
dependencies = [
    "clarifai-shared = { workspace = true }"
]

[tool.ruff]
# Service-specific ruff config if needed, or inherits from root.
