[tool.poetry]
name = "clarifai-ui"
version = "0.1.0"
description = "Gradio web interface for ClarifAI configuration and monitoring"
authors = ["ClarifAI Team"]
readme = "README.md"
packages = [{include = "clarifai_ui"}]

[tool.poetry.dependencies]
python = "^3.11"
# Shared package
clarifai-shared = {path = "../../shared", develop = true}
# Web interface
gradio = "^4.26.0"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
# Data and visualization
pandas = "^2.2.0"
plotly = "^5.20.0"
# Configuration and utilities
pydantic = "^2.7.0"
python-dotenv = "^1.0.0"
# API clients
httpx = "^0.27.0"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"