[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clarifai-ui"
version = "0.1.0"
description = "User interface for ClarifAI."
dependencies = [
    "gradio"
]

[project.scripts]
clarifai-ui = "clarifai_ui.main:main"

[tool.hatch.build.targets.wheel]
packages = ["clarifai_ui"]

[tool.ruff]
# Service-specific ruff config
