[project]
name = "scheduler"
version = "0.1.0"
description = "Task scheduling service for periodic jobs and background processing"
authors = [
    {name = "ClarifAI Team"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Shared package
    "clarifai-shared",
    # Scheduling
    "apscheduler>=3.10.0",
    "celery>=5.3.0",
    # Message queue
    "pika>=1.3.0",
    # Configuration and utilities
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "croniter>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"