[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aclarai-scheduler"
version = "0.1.0"
description = "Service for running scheduled background tasks."
dependencies = [
    "aclarai-shared",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0"
]

[tool.ruff]
# Service-specific ruff config
