[tool.poetry]
name = "vault-watcher"
version = "0.1.0"
description = "File monitoring service for Obsidian vault changes"
authors = ["ClarifAI Team"]
readme = "README.md"
packages = [{include = "vault_watcher"}]

[tool.poetry.dependencies]
python = "^3.11"
# Shared package
clarifai-shared = {path = "../../shared", develop = true}
# File monitoring
watchdog = "^4.0.0"
# Message queue
pika = "^1.3.0"
# Configuration and utilities
pydantic = "^2.7.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"