[project]
name = "vault-watcher"
version = "0.1.0"
description = "File monitoring service for Obsidian vault changes"
authors = [
    {name = "ClarifAI Team"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Shared package
    "clarifai-shared",
    # File monitoring
    "watchdog>=4.0.0",
    # Message queue
    "pika>=1.3.0",
    # Configuration and utilities
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"