[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aclarai-vault-watcher"
version = "0.1.0"
description = "Service to monitor vault file changes."
dependencies = [
    "aclarai-shared",
    "watchdog>=6.0.0",
    "pika>=1.3.0"
]

[tool.ruff]
# Service-specific ruff config
